# alex_path_planner

./: .gitignore  .gitmodules  generate_docs.sh
alex_path_planner/: CMakeLists.txt  Doxyfile  package.xml  plugins.xml
alex_path_planner/cfg/: alex_path_planner.cfg
alex_path_planner/src/: NodeBase.h  controller_test_node.cpp  path_planner_node.cpp  path_planner_plugin.cpp  trajectory_publisher.h
alex_path_planner/src/common/dynamic_obstacles/: DynamicObstacle.h  DynamicObstaclesManager.h  DynamicObstaclesManager1.h
alex_path_planner/src/common/map/: Costmap2DMap.cpp  Costmap2DMap.h  Map.h
alex_path_planner/src/executive/: executive.cpp  executive.h
alex_path_planner/src/planner/: AStarPlanner.cpp  BitStarPlanner.cpp  Planner.h  PotentialFieldPlanner.cpp  SamplingBasedPlanner.cpp  SamplingBasedPlanner.h
alex_path_planner/src/planner/search/: Edge.h  Vertex.h
alex_path_planner/src/planner/utilities/: Ribbon.h  RibbonManager.h  StateGenerator.h
alex_path_planner/test/planner/: test_planner.cpp
alex_path_planner/test/system/: NodeStub.h
alex_path_planner_common/: CMakeLists.txt  Doxyfile  package.xml
alex_path_planner_common/include/alex_path_planner_common/: DubinsPlan.h  DubinsWrapper.h  State.h  TrajectoryDisplayerHelper.h
alex_path_planner_common/src/dubinsPlan/: DubinsPlan.cpp  DubinsWrapper.cpp
alex_path_planner_common/src/state/: State.cpp
alex_path_planner_common/src/utilities/: TrajectoryDisplayerHelper.cpp
alex_path_planner_common/srv/: UpdateReferenceTrajectory.srv
path_planner/: CMakeLists.txt  package.xml
path_planner/cfg/: path_planner.cfg
path_planner/src/: NodeBase.h  controller_test_node.cpp  path_planner_node.cpp  trajectory_publisher.h
path_planner/src/common/dynamic_obstacles/: GaussianDynamicObstaclesManager.cpp  GaussianDynamicObstaclesManager.h
path_planner/src/executive/: executive.cpp  executive.h
path_planner/src/planner/: AStarPlanner.h  BitStarPlanner.cpp  BitStarPlanner.h  Planner.cpp  Planner.h  PotentialFieldPlanner.h
path_planner/src/planner/search/: Edge.h
path_planner/src/planner/utilities/: RibbonManager.h
path_planner/test/planner/: tests_using_robust_dubins.cpp
path_planner_common/: CMakeLists.txt  package.xml
path_planner_common/include/path_planner_common/: DubinsWrapper.h  TrajectoryDisplayerHelper.h
path_planner_common/src/dubinsPlan/: DubinsPlan.cpp  DubinsWrapper.cpp
path_planner_common/src/utilities/: TrajectoryDisplayerHelper.cpp
path_planner_common/srv/: UpdateReferenceTrajectory.srv
